--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,14 @@
 
 * {
 	border: 0;
-  font-family: 'Montserrat'/*, sans-serif*/;
+	font-family: 'Montserrat'/*, sans-serif*/;
 	font-size: 100%;
 	font-weight: 400;
 	margin: 0;
 	outline: none;
 	padding: 0;
 	vertical-align: baseline;
-  -webkit-font-smoothing: antialiased;
+	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
 }
@@ -113,24 +113,25 @@ strong {
 }
 
 header {
-  align-items: flex-start;
+  align-items: center;
   display: flex;
-  height: 50vw;
+  height: 40vw;
   justify-content: center;
   margin-bottom: 40px;
-  max-height: 520px;
+  max-height: 5000px;/*520px;*/
   position: relative;
   overflow: hidden;
 }
 
 .header-content {
   padding-top: 32px;
+  /* vertical-align: middle; */
   position: relative;
   z-index: 3;
 }
 
 header::before {
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(256, 256, 256, 0.7);
   content: '';
   height: 100%;
   left: 0;
@@ -138,6 +139,25 @@ header::before {
   top: 0;
   width: 100%;
   z-index: 1;
+}
+
+/*Guarradilla*/
+.header-bg {
+  left: 50%;
+  position: absolute;
+  bottom: 0;
+  transform: translate(-50%, 0);
+  width: 100%;
+  z-index: 0;
+  border-radius: 0;
+}
+
+.header-img-logo {
+  position: relative;
+  z-index: 3;
+  vertical-align: middle;
+  width: 50vw;
+  /* max-height: 300px; */
 }
 
 header video {
@@ -166,7 +186,7 @@ header p {
   font-weight: 300;
   margin: 0 auto 32px auto;
   text-align: center;
-  text-shadow: 1px 1px 0px rgba(0,0,0,0.5);
+  text-shadow: 1px 1px 0px rgba(1,1,1,0.5);
   text-transform: uppercase;
   width: 70%;
 }
@@ -218,6 +238,16 @@ header p strong {
 .wrapper {
   max-width: 1024px;
   margin: 0 auto;
+}
+
+.intro-logo {
+  padding: 0 16px;
+  /*margin-bottom: 40px;*/
+}
+
+.intro-logo img{
+  width: 25vw;
+  text-align: center;
 }
 
 .intro {
@@ -380,12 +410,6 @@ footer a:hover::before {
 }
 
 /*For YouTube video. Taken from https://www.h3xed.com/web-development/how-to-make-a-responsive-100-width-youtube-iframe-embed*/
-.container-YouTube {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  padding-bottom: 56.25%;
-}
 .video-YouTube {
   position: absolute;
   top: 0;
@@ -393,6 +417,20 @@ footer a:hover::before {
   width: 100%;
   height: 100%;
 }
+
+.container-YouTube {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 56.25%;
+}
+
+/*0% for smaller screen. Larger screen on @media*/
+.side-padder {
+  padding-left: 0%;
+  padding-right: 0%;
+}
+
 /*End YouTube*/
 
 @media (min-width: 768px) {
@@ -410,7 +448,7 @@ footer a:hover::before {
   }
   
   header {
-    align-items: center;
+    /* align-items: center; */
     margin-bottom: 80px;
   }
   
@@ -518,6 +556,11 @@ footer a:hover::before {
     max-height: 44px;
   }
   
+  .side-padder {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
   footer p {
     font-size: 18px;
   }
