--- a/apps/promoalfar-segovia33/styles.css
+++ b/apps/promoalfar-segovia33/styles.css
@@ -242,19 +242,28 @@ p {
   width: 100%;
 }
 
-.video-model {
-  /* position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); */
+.video-loading-label{
+  position: absolute;
   width: 100%;
+  height: 100%;
+  z-index: 1;
+ 
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.video-model {
+  width: 100%;
+  z-index: 2;
 }
 
 .video-fullScreen-button {
   position: absolute;
   bottom: 10px;
   right: 10px;
-  z-index: 1;
+  z-index: 3;
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 50%;
