New legal button with an anchor.

--- a/apps/promoalfar-segovia33/styles.css
+++ b/apps/promoalfar-segovia33/styles.css
@@ -136,6 +136,18 @@ p {
 }
 
 /* BOTONES */
+.button-legal {
+  display: inline-block;
+  align-items: center;
+  padding: 6px;
+  background-color: #e9e9e9;
+  color: #1f1f1f;
+  border-radius: 5px;
+  border: 1px solid black;
+  cursor: pointer;
+  text-decoration: none;
+}
+
 .button {
   display: flex;
   flex-direction: column;
